<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:src="@drawable/wc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="27dp"
            android:gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:hint="@string/ex_email"
                android:textSize="12sp"
                android:textColorHint="@color/gray"
                android:backgroundTint="@color/blue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pas"
                android:textSize="12sp"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/pas_edit"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:hint="@string/u_pas"
                android:textSize="12sp"
                android:textColorHint="@color/gray"
                android:backgroundTint="@color/blue"/>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_but"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/blue"
            android:text="@string/enter"
            android:gravity="center"
            android:layout_marginTop="24dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>